...
          tabBarIcon: ({ color }) => <ScrollIcon color={color} size={22} />,
        }}
      />
      <Tabs.Screen
        name="gym"
        options={{
          title: 'GYM',
          tabBarIcon: ({ color }) => <DumbbellIcon color={color} size={22} />,
        }}
      />
    </Tabs>
  );
}
...
